bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/undefined_event_part.stderr
error: `Pezpallet` does not have #[pezpallet::event] defined, perhaps you should remove `Event` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_event_part.rs:22:1
   |
22 |   #[pezframe_support::pezpallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pezpallet::__bizinikiwi_event_check::is_event_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Event` in module `pezpallet`
  --> tests/construct_runtime_ui/undefined_event_part.rs:66:1
   |
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ not found in `pezpallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these enums
   |
18 + use pezframe_support_test::Event;
   |
18 + use pezframe_system::Event;
   |

error[E0433]: failed to resolve: could not find `Event` in `pezpallet`
  --> tests/construct_runtime_ui/undefined_event_part.rs:66:1
   |
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ could not find `Event` in `pezpallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these enums
   |
18 + use pezframe_support_test::Event;
   |
18 + use pezframe_system::Event;
   |
